Use an external library to improve the classifier based on input values.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <script src="js/libs/d3v5/d3.v5.min.js"></script>
     <script src="js/libs/rxjs/rxjs.umd.min.js"></script>
     <script src="js/libs/d3-radarchart/radar-chart.js"></script>
+    <script src="js/libs/classybrew/classybrew.min.js"></script>
 
     <script src="js/main.js"></script>
     <script src="js/utils.js"></script>
